fixed double borders on dialog-buttons

--- a/gtk.css
+++ b/gtk.css
@@ -183,6 +183,16 @@ windowcontrols button:hover image{
 	color: #ffffff;
 }
 
+.messagedialog .response-area button, .dialog-action-area button{
+	border: none;
+	border-top: 2px solid #000000;
+	border-right: 2px solid #000000;
+}
+
+.messagedialog .response-area button:last-child, .dialog-action-area button:last-child{
+	border: none;
+	border-top: 2px solid #000000;
+}
 
 .linked button{
 	border: 2px solid #000000;
@@ -196,6 +206,15 @@ windowcontrols button:hover image{
 
 .linked button:last-child{
 	border-right: 2px solid #000000;
+}
+
+.linked.vertical button{
+	border: 2px solid #000000;
+	border-bottom: none;
+}
+
+.linked button:last-child{
+	border-bottom: 2px solid #000000;
 }
 
 /*app specific styles*/
